force-app/main/default/objects/MKP_Helper__c/MKP_Helper__c.object-meta.xml
<CustomObject>
    <description>MKP - Used by vendor. Not sure if we need it.</description>
    <label>MKP Helper</label>
    <nameField>
        <displayFormat>MKP{0}</displayFormat>
        <label>MKP Helper Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MKP Helper</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>