force-app/main/default/objects/MKP_Helper__c/fields/NSF_Check_Pen_Col__c.field-meta.xml
<CustomField>
    <fullName>NSF_Check_Pen_Col__c</fullName>
    <label>NSF Check Pen Col</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>