force-app/main/default/objects/MKP_Helper__c/fields/Waiting_Time_Penalties__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Time_Penalties__c</fullName>
    <label>Waiting Time Penalties</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>